--- a/references.bib
+++ b/references.bib
@@ -2898,6 +2898,17 @@
     author = {William D.S. Killgore, Sara A. Cloonan, Emily C. Taylor, Natalie S. Dailey}
 }
 
+@article{Prabhudesai2023LoweringAI,
+    title = {{Lowering the computational barrier: Partially Bayesian neural networks for transparency in medical imaging AI}},
+    year = {2023},
+    journal = {Frontiers in Computer Science},
+    author = {Prabhudesai, Snehal and Hauth, Jeremiah and Guo, Dingkun and Rao, Arvind and Banovic, Nikola and Huan, Xun},
+    volume = {5},
+    doi = {10.3389/fcomp.2023.1071174},
+    issn = {26249898},
+    keywords = {Bayesian uncertainty, Responsible AI, medical decision-making, transparency, tumor segmentation}
+}
+
 @article{Dietze2020MentalCOVID-19,
     title = {{Mental Health, Substance Use, and Suicidal Ideation During the COVID-19}},
     year = {2020},
@@ -3720,6 +3731,22 @@
     author = {Papadopoulos V, Baraldi M, Guilarte TR, Knudsen TB, Lacapere JJ, Lindemann P, et al},
     pages = {402--409},
     volume = {27}
+}
+
+@article{Salahuddin2022TransparencyMethods,
+    title = {{Transparency of deep neural networks for medical image analysis: A review of interpretability methods}},
+    year = {2022},
+    journal = {Computers in Biology and Medicine},
+    author = {Salahuddin, Zohaib and Woodruff, Henry C. and Chatterjee, Avishek and Lambin, Philippe},
+    number = {October 2021},
+    pages = {105111},
+    volume = {140},
+    publisher = {Elsevier Ltd},
+    url = {https://doi.org/10.1016/j.compbiomed.2021.105111},
+    doi = {10.1016/j.compbiomed.2021.105111},
+    issn = {18790534},
+    arxivId = {2111.02398},
+    keywords = {Deep neural networks, Explainability, Explainable artificial intelligence, Interpretability, Medical imaging}
 }
 
 @article{Chen2011TSPOPDT,
