Updates from Overleaf

--- a/glossary.tex
+++ b/glossary.tex
@@ -25,7 +25,7 @@
 }
 
 \newacronym{AI}{AI}{Artificial Intelligence}
-\newacronym{AE}{AE}{Auto-Encoder}
+\newacronym{AE}{AE}{Autoencoder}
 \newacronym{AC}{AC}{Attenuation Correction}
 \newacronym{ALS}{ALS}{Amyotrophic Lateral Sclerosis}
 \newacronym{GPU}{GPU}{Graphics Processing Unit}
