--- a/main.tex
+++ b/main.tex
@@ -60,7 +60,7 @@
         Mattia~Veronese,
         Nicola~Toschi,
         Jodi~Gilman,
-        Kris~Thielemans,
+        Kris~Thielemans~\IEEEmembership{Senior~Member,~IEEE},
         and~Marco~L.~Loggia
     
         \vspace{-0.75cm}
